RegressionTests/TestSuiteExport/accept/uart.blade
// EXPECT: pass

fn init() void {
}

cog task main() {
    init();
}