RegressionTests/TestSuiteExport/reject/invalid_extern_scope.blade
// EXPECT: fail
// DIAGNOSTICS: InvalidExternScope

fn f() void {
    extern var x: u32;
}